# vlc_auto_pause

./: Cargo.toml  README.adoc
.github/workflows/: rust_release.yml
src/: main.rs
