[package]
name = "vlc_auto_pause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.21.7"

[dependencies.windows]
version = "0.53"
features = [
    "Foundation_Collections",
    "Media_Control",
]
